# img_convolution

./: .gitignore  CMakeLists.txt  Makefile  bench.sh  machines.sh  test.sh  time.sh
include/: convolute.h  filters.h  work.h
mpi/: Makefile  run.sh
mpi/include/: args.h  image.h  io.h  neighbours.h  pixel.h
mpi/src/: io.c  main.c  neighbours.c  work.c
mpi_openmp/: .gitignore  Makefile  run.sh
mpi_openmp/include/: directions.h  filters.h  utils.h
mpi_openmp/src/: args.c  convolute.c  io.c  main.c
src/: args.c  convolute.c  main.c  utils.c  work.c
